--- a/css/style.css
+++ b/css/style.css
@@ -1,101 +1,59 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box; }
+/*
+Error: Invalid CSS after "...argin-bottom: 5": expected ";", was "`*$fontsize;"
+        on line 82 of sass/style.scss
 
-body {
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  background-image: url(../images/bg.png);
-  display: flex;
-  flex-wrap: wrap; }
+77:         flex-direction: column;
+78:         flex-wrap: wrap;
+79:         &__search{
+80:             margin-top: 2*$fontsize;
+81:             background-color: rgba(69, 58, 222, 0.7);
+82:             margin-bottom: 5`*$fontsize;
+83:             border-radius: 6*$fontsize;
+84:             height: 4*$fontsize;
+85:             width: 50*$fontsize;
+86:             display: flex;
+87:             align-items: center;
 
-.nav {
-  display: flex;
-  width: 100%;
-  height: 48px;
-  margin-top: 61.2px;
-  background-color: rgba(202, 200, 227, 0.1);
-  background-image: url(../images/logobg.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  justify-content: space-between; }
-  .nav__logo {
-    display: flex;
-    align-items: center; }
-    .nav__logo--logoImag {
-      margin-left: 24px;
-      height: 60px;
-      justify-self: flex-start; }
-    .nav__logo--logoWords {
-      margin-left: 24px;
-      color: white;
-      font-size: 30px; }
-    .nav__logo--address {
-      margin-left: 19.2px;
-      font-size: 19.2px;
-      color: white; }
-  .nav__login {
-    display: flex;
-    align-items: center; }
-    .nav__login--notification {
-      width: auto;
-      height: 26.4px;
-      padding-right: 24px; }
-    .nav__login--loginMag {
-      width: auto;
-      height: 26.4px;
-      padding-right: 24px; }
-    .nav__login--setting {
-      width: auto;
-      height: 26.4px;
-      padding-right: 24px; }
-
-.content {
-  margin-top: 84px;
-  background-color: rgba(27, 16, 183, 0);
-  width: 100%;
-  height: 500px;
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap; }
-  .content__search {
-    background-color: rgba(69, 58, 222, 0.7);
-    border-radius: 72px;
-    height: 48px;
-    width: 600px;
-    display: flex;
-    align-items: center;
-    justify-content: center; }
-    .content__search--logo {
-      width: auto;
-      height: 26.4px;
-      padding-right: 24px; }
-    .content__search--type {
-      width: 348px;
-      background-color: rgba(27, 16, 183, 0.5); }
-  .content__cards {
-    margin-top: 36px;
-    display: grid;
-    grid-template-columns: repeat(12, 54px);
-    grid-gap: 30px; }
-    .content__cards--card {
-      background-color: rgba(132, 94, 194, 0.7);
-      border-radius: 24px;
-      grid-column-end: span 4;
-      width: 100%;
-      height: 192px;
-      display: flex;
-      flex-direction: column;
-      cursor: pointer;
-      transition: all 0.3 ease 0; }
-      .content__cards--card img {
-        width: 100%;
-        height: 100%; }
-      .content__cards--card:hover {
-        transform: translateY(-12px); }
-
-/*# sourceMappingURL=style.css.map */
+Backtrace:
+sass/style.scss:82
+/Library/Ruby/Gems/2.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:1308:in `expected'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:1238:in `expected'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:1233:in `tok!'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:815:in `block in try_declaration'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:1284:in `rethrow'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:820:in `try_declaration'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:743:in `declaration_or_ruleset'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:708:in `block_child'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:700:in `block_contents'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:689:in `block'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:758:in `declaration_or_ruleset'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:708:in `block_child'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:700:in `block_contents'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:689:in `block'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:681:in `ruleset'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:707:in `block_child'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:700:in `block_contents'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:137:in `stylesheet'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:41:in `parse'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.7.4/lib/sass/engine.rb:414:in `_to_tree'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.7.4/lib/sass/engine.rb:389:in `_render_with_sourcemap'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.7.4/lib/sass/engine.rb:307:in `render_with_sourcemap'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:462:in `update_stylesheet'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:209:in `each'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:443:in `on_file_changed'
+/Library/Ruby/Gems/2.3.0/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:320:in `block in watch'
+/Library/Ruby/Gems/2.3.0/gems/sass-listen-4.0.0/lib/sass-listen/event/config.rb:23:in `call'
+/Library/Ruby/Gems/2.3.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:115:in `_process_changes'
+/Library/Ruby/Gems/2.3.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:19:in `block in loop_for'
+/Library/Ruby/Gems/2.3.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:15:in `loop'
+/Library/Ruby/Gems/2.3.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:15:in `loop_for'
+/Library/Ruby/Gems/2.3.0/gems/sass-listen-4.0.0/lib/sass-listen/event/loop.rb:84:in `_wait_for_changes'
+/Library/Ruby/Gems/2.3.0/gems/sass-listen-4.0.0/lib/sass-listen/event/loop.rb:42:in `block in setup'
+/Library/Ruby/Gems/2.3.0/gems/sass-listen-4.0.0/lib/sass-listen/internals/thread_pool.rb:6:in `block in add'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Error: Invalid CSS after \"...argin-bottom: 5\": expected \";\", was \"`*$fontsize;\"\A         on line 82 of sass/style.scss\A \A 77:         flex-direction: column;\A 78:         flex-wrap: wrap;\A 79:         &__search{\A 80:             margin-top: 2*$fontsize;\A 81:             background-color: rgba(69, 58, 222, 0.7);\A 82:             margin-bottom: 5`*$fontsize;\A 83:             border-radius: 6*$fontsize;\A 84:             height: 4*$fontsize;\A 85:             width: 50*$fontsize;\A 86:             display: flex;\A 87:             align-items: center;"; }
