--- a/sass/style.scss
+++ b/sass/style.scss
@@ -19,17 +19,103 @@
     }
 
     @mixin circleStyle{
-        font-size: 1.5*$fontsize;
+        font-size: 1.3*$fontsize;
         font-weight: 700;
         color: white;
         @include flexCenter();
-        height: 12*$fontsize;
-        width: 12*$fontsize;
+        height: 6*$fontsize;
+        width: 6*$fontsize;
         -moz-border-radius: 12*$fontsize;
         -webkit-border-radius:12*$fontsize;
         border-radius: 12*$fontsize;
-        
     }
+
+    @mixin leftAndRightContainer {
+        box-shadow: 0 0 10px rgb(0,153,184) inset,0 0 30px rgb(0,153,184);
+        width: 100%;
+        grid-column: span 3;
+        // background-color: rgb(103, 22, 90);
+        &__word{
+            height: 20%;
+            font-size: 1.8*$fontsize;
+            font-weight: 800;
+            color: white;
+            @include flexCenter();
+            // background-color: orange;
+        }
+        &__barChart{
+            height: 80%;
+            // background-color: black;
+            display: grid;
+            grid-template-rows: 2fr 2fr;
+            & .caseContainer{
+                grid-column-end: span 1;
+                // background-color: purple; 
+                display: grid; 
+                grid-template-columns:  repeat(12, 1fr);
+                &__type{
+                    color: white;
+                    @include flexCenter();
+                    // background-color: red;
+                    grid-column: span 3;
+                }
+                &__bars{
+                    // background-color: green;
+                    grid-column: span 6;
+                    display: flex;
+                    flex-wrap: wrap;
+                    align-content: center;
+                    & .compareBarContainer{
+                        display: grid;
+                        grid-template-columns: repeat(12, 1fr);
+                        width: 100%;
+                        &__date{
+                            color: white;
+                            height: 3.5*$fontsize;
+                            @include flexCenter();
+                            // background-color: #845EC2;
+                            grid-column: span 3;
+                        }
+                        &__bars{
+                            grid-column:4 / span 9;
+                            @include flexCenter();
+                            &__totalBar{
+                                // background-color: red;
+                                width: 100%;
+                                height: 2*$fontsize;
+                            
+                                &__realBar{
+                                    height: 100%;
+                                    width: 50%;
+                                    background-color: blue;
+                                }   
+                            }
+                        }
+                    }
+                }
+                &__circleContainer{
+                    @include flexCenter();
+                    grid-column: span 3;
+                    // background-color: green;
+                    &__circle{
+                        @include circleStyle();
+                        background: rgb(108, 18, 168); 
+                        box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+                        &:hover{
+                        background-color: #b9e769;
+                        -webkit-box-shadow: 10px 10px 99px 6px rgba(185, 231, 105, 1);
+                        -moz-box-shadow: 10px 10px 99px 6px rgba(185, 231, 105, 1);
+                        box-shadow: 10px 10px 99px 6px rgba(185, 231, 105, 1);
+                        }
+
+                    }
+                }
+
+            } 
+        }
+    }
+
+ 
 
     body{
         background-position: center center;
@@ -45,7 +131,7 @@
         display: flex;
         width: 100%;
         height: 4*$fontsize;
-        margin-top: 5.1*$fontsize;
+        margin-top: 3*$fontsize;
         background-color: rgba(202, 200, 227, 0.1);
         background-image: url(../images/logobg.png);
         background-repeat: no-repeat;
@@ -83,6 +169,52 @@
             &--setting{
                 @include navIcon();
             }
+            &--index {
+                margin-right: 2*$fontsize;
+                @include flexCenter();
+               
+                & button{
+                    width: 8*$fontsize;
+                    height: 3.3*$fontsize;
+                    border-radius: 1*$fontsize;
+                   
+                    background: transparent;
+                    background-color: rgba(88, 32, 185, 0.5);
+                    color: white;
+                    overflow: hidden;
+                    position: relative;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+                & span {
+                    display: flex;
+                    justify-items: center;
+                    align-items: center;
+                    text-align: center;
+                    font-size: 1.3*$fontsize;
+                    font-weight: 700;
+                    z-index: 20;  
+                  }
+                & :after {
+                      content: '';
+                      display: block;
+                      position: absolute;
+                      top: -36px;
+                      left: -100px;
+                      background: white;
+                      width: 50px;
+                      height: 125px;
+                      opacity: 20%;
+                      transform: rotate(-45deg);
+                  }
+                  & :hover :after {
+                    left: 140%;
+                    transition: all 600ms cubic-bezier(0.3, 1, 0.2, 1);
+                     -webkit-transition: all 600ms cubic-bezier(0.3, 1, 0.2, 1);
+                  }
+            }
+           
         }
     }
 
@@ -114,8 +246,6 @@
             } 
         }
         &__cards{
-            
-            // background-color: black;
             display: grid;
             grid-template-columns: repeat(16,2*$fontsize);
             grid-gap: 4*$fontsize;
@@ -146,20 +276,21 @@
     .badge{ 
         width: 100%;
         height: 40*$fontsize;
-        margin-top: 15*$fontsize;
+        margin-top: 10*$fontsize;
         display: flex;
         justify-content: center;
         align-items: center;
         &__badgeContainer{
-            width: 33*$fontsize;
-            height: 34*$fontsize;
+            width: 30*$fontsize;
+            height: 30*$fontsize;
             & img{
                 width: 100%;
                 height: 100%;
                 transition: all 0.3 ease 0;
-                &:hover{
+                &:active{
                     transform: translateY(-1*$fontsize);
                 }
+                
             }
         }  
     }
@@ -172,74 +303,105 @@
     }
 
     .diagramPreview{
-        display: none;
         position: fixed;
         width: 100%;
-        height: 100%;
+        height: 800*$fontsize;
         background-color: rgba(0, 0, 0, 0.5);
         justify-content: center;
-        &__container{
+        &__Container{
             width: 100%;
-            height: 30*$fontsize;
+            height: 50*$fontsize;
             background-color: rgba(23, 86, 111, 0.5);
             box-shadow: 0 0 10px rgb(0,153,184) inset,0 0 30px rgb(0,153,184);
             margin-top: 10*$fontsize;
-            &--close{
-                display: flex;
-                flex-direction: row-reverse;
-                & div{
-                    width: 2*$fontsize;
-                    height: 2*$fontsize;
-                    border-radius: 50%;
-                    cursor: pointer;
-                    background-color: rgba(79, 134, 201, 0.5);
+            &--topContainer{
+                width: 100%;
+                height: 60%;
+                &--close{
                     display: flex;
-                    justify-content: center;
-                    align-items: center;
-                }
-            }
-            &--diagrams{
-                height: 27*$fontsize;
-                display: grid;
-                grid-template-columns: 1fr  repeat(12,4*$fontsize) 1fr;
-                grid-gap: 3*$fontsize;
-                & .container{
-                    display: grid;
-                    grid-column: 2 / span 12;
-                    grid-template-columns: repeat(12,4*$fontsize);
-                    grid-gap: 3*$fontsize;
-                    justify-items: center;
-                    align-items: center;
-                    &__circleAndWord{
-                        grid-column-start: span 3;
+                    flex-direction: row-reverse;
+                    & div{
+                        width: 2*$fontsize;
+                        height: 2*$fontsize;
+                        border-radius: 50%;
+                        cursor: pointer;
+                        background-color: rgba(79, 134, 201, 0.5);
                         display: flex;
-                        flex-direction: column;
                         justify-content: center;
                         align-items: center;
-                        &--alarmCircle{
-                            @include circleStyle();
-                            background: rgb(224, 74, 238); 
-                            -webkit-box-shadow: 10px 10px 99px 6px rgba(240, 56, 255, 1);
-                            -moz-box-shadow: 10px 10px 99px 6px rgb(187, 87, 197);
-                            box-shadow: 10px 10px 99px 6px rgb(229, 177, 233);
-                        }
-                        &--circle{
-                            @include circleStyle();
-                            background: rgb(108, 18, 168); 
-                            box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
-                            &:hover{
-                                background-color: #b9e769;
-                                -webkit-box-shadow: 10px 10px 99px 6px rgba(185, 231, 105, 1);
-                                -moz-box-shadow: 10px 10px 99px 6px rgba(185, 231, 105, 1);
-                                box-shadow: 10px 10px 99px 6px rgba(185, 231, 105, 1);
-                            }
-                        }
-                        &--word{
-                            margin-top: 3*$fontsize;
-                            color: white;
-                        }
-                    }    
+                    }
+                }
+                &--diagrams{
+                    width: 100%;
+                    height: 27*$fontsize;
+                    display: grid;
+                    grid-template-columns:  repeat(10,1fr);        
+                    & .leftContainer{
+                        @include leftAndRightContainer();
+                    }
+                    & .middleContainer{
+                        grid-column: 4 / span 4;
+                        
+                    }
+                    & .rightContainer{
+                        @include leftAndRightContainer();
+                    }
+                    // & .container{
+                    //     display: grid;
+                    //     grid-column: 2 / span 12;
+                    //     grid-template-columns: repeat(12,4*$fontsize);
+                    //     grid-gap: 3*$fontsize;
+                    //     justify-items: center;
+                    //     align-items: center;
+                        // & .container__circleAndWord{
+                        //     grid-column-start: span 3;
+                        //     display: flex;
+                        //     flex-direction: column;
+                        //     justify-content: center;
+                        //     align-items: center;
+                        //     &--alarmCircle{
+                        //         @include circleStyle();
+                        //         background: rgb(224, 74, 238); 
+                        //         -webkit-box-shadow: 10px 10px 99px 6px rgba(240, 56, 255, 1);
+                        //         -moz-box-shadow: 10px 10px 99px 6px rgb(187, 87, 197);
+                        //         box-shadow: 10px 10px 99px 6px rgb(229, 177, 233);
+                        //     }
+                        //     & .container__circleAndWord--circle{
+                        //         @include circleStyle();
+                        //         background: rgb(108, 18, 168); 
+                        //         box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+                        //         &:hover{
+                        //             background-color: #b9e769;
+                        //             -webkit-box-shadow: 10px 10px 99px 6px rgba(185, 231, 105, 1);
+                        //             -moz-box-shadow: 10px 10px 99px 6px rgba(185, 231, 105, 1);
+                        //             box-shadow: 10px 10px 99px 6px rgba(185, 231, 105, 1);
+                        //         }
+                        //     }
+                        //     &--word{
+                        //         margin-top: 3*$fontsize;
+                        //         color: white;
+                        //     }
+                        // }    
+                    // }
                 }
             }
+
+            &--bottomContainer{
+                height: 40%;
+                box-shadow: 0 0 10px rgb(94, 184, 202) inset,0 0 30px rgb(1, 15, 18);
+                & .container{
+                    display: grid;
+                    grid-template-columns: repeat(8, 1fr);
+                    
+                }
+
+               
+                
+            }
+            
+
         }
+        
+
+        
     }
